syntax = "proto3";

package profileDao;

option go_package = "/profileDao";

message Empty {}

message ProfileName {
  string name = 1;
}

message SliceOfProfileObj {
  repeated ProfileObj profiles = 1;
}

message ProfileObj {
  string nickname = 1 [json_name="nickname"];
  string firstName = 2 [json_name="first_name"];
  string lastName = 3 [json_name="last_name"];
  optional int64 createdAt = 4 [json_name="created_at"];
  optional int64 updatedAt = 5 [json_name="updated_at"];
  optional int64 deletedAt = 6 [json_name="deleted_at"];
}

message InsertResult {
  bytes objectID = 1;
  string username = 2;
}

message ProfileUpdate {
  ProfileName profileName = 1;
  string nickname = 2 [json_name="nickname"];
  string firstName = 3 [json_name="first_name"];
  string lastName = 4 [json_name="last_name"];
  optional int64 updatedAt = 5 [json_name="updated_at"];
}

message Page {
  int64 num = 1;
}

service ProfileRepo {
  rpc FindProfileInStorage(ProfileName) returns (ProfileObj) {}
  rpc InsertProfileToStorage(ProfileObj) returns (InsertResult) {}
  rpc DeleteProfileFromStorage(ProfileName) returns (Empty) {}
  rpc UpdateProfileInStorage(ProfileUpdate) returns (Empty) {}
  rpc ListProfilesFromStorage(Page) returns (SliceOfProfileObj) {}
}